W-13748730: Add module-info to mule-core and services apis (#12637)
Addendum